--- a/oddam/templates/base.html
+++ b/oddam/templates/base.html
@@ -19,7 +19,7 @@
 
 {% block footer %}
     <footer>
-      <div class="contact">
+      <div class="contact" id="contact">
         <h2>Skontaktuj się z nami</h2>
         <h3>Formularz kontaktowy</h3>
         <form>
