--- a/oddam/templates/form-confirmation.html
+++ b/oddam/templates/form-confirmation.html
@@ -15,11 +15,11 @@
         </ul>
 
         <ul>
-          <li><a href="index.html" class="btn btn--without-border active">Start</a></li>
-          <li><a href="index.html#steps" class="btn btn--without-border">O co chodzi?</a></li>
-          <li><a href="index.html#about-us" class="btn btn--without-border">O nas</a></li>
-          <li><a href="index.html#help" class="btn btn--without-border">Fundacje i organizacje</a></li>
-          <li><a href="index.html#contact" class="btn btn--without-border">Kontakt</a></li>
+          <li><a href="{% url 'start' %}" class="btn btn--without-border active">Start</a></li>
+          <li><a href="{% url 'start' %}#steps" class="btn btn--without-border">O co chodzi?</a></li>
+          <li><a href="{% url 'start' %}#about-us" class="btn btn--without-border">O nas</a></li>
+          <li><a href="{% url 'start' %}#help" class="btn btn--without-border">Fundacje i organizacje</a></li>
+          <li><a href="{% url 'start' %}#contact" class="btn btn--without-border">Kontakt</a></li>
         </ul>
       </nav>
 
