--- a/oddam/templates/index.html
+++ b/oddam/templates/index.html
@@ -8,12 +8,12 @@
         </ul>
 
         <ul>
-          <li><a href="" class="btn btn--without-border active">Start</a></li>
-          <li><a href="#steps" class="btn btn--without-border">O co chodzi?</a></li>
-          <li><a href="#about-us" class="btn btn--without-border">O nas</a></li>
-          <li><a href="#help" class="btn btn--without-border">Fundacje i organizacje</a></li>
-          <li><a href="form.html" class="btn btn--without-border">Przekaż dary</a></li>
-          <li><a href="#contact" class="btn btn--without-border">Kontakt</a></li>
+          <li><a href="{% url 'start' %}" class="btn btn--without-border active">Start</a></li>
+          <li><a href="{% url 'start' %}#steps" class="btn btn--without-border">O co chodzi?</a></li>
+          <li><a href="{% url 'start' %}#about-us" class="btn btn--without-border">O nas</a></li>
+          <li><a href="{% url 'start' %}#help" class="btn btn--without-border">Fundacje i organizacje</a></li>
+          <li><a href="{% url 'add_donation' %}" class="btn btn--without-border">Przekaż dary</a></li>
+          <li><a href="{% url 'start' %}#contact" class="btn btn--without-border">Kontakt</a></li>
         </ul>
       </nav>
 
@@ -78,9 +78,9 @@
       <div class="about-us--text">
         <h2>O nas</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas vitae animi rem pariatur incidunt libero optio esse quisquam illo omnis.</p>
-        <img src="images/signature.svg" class="about-us--text-signature" alt="Signature" />
+        <img src="../../static/images/signature.svg" class="about-us--text-signature" alt="Signature" />
       </div>
-      <div class="about-us--image"><img src="images/about-us.jpg" alt="People in circle" /></div>
+      <div class="about-us--image"><img src="../../static/images/about-us.jpg" alt="People in circle" /></div>
     </section>
 
      <section id="help" class="help">
