--- a/oddam/templates/base.html
+++ b/oddam/templates/base.html
@@ -12,6 +12,21 @@
   <body>
 
 {% block header %}
+    <nav class="container container--70">
+        <ul class="nav--actions">
+          <li><a href="{% url 'login' %}" class="btn btn--small btn--without-border">Zaloguj</a></li>
+          <li><a href="{% url 'registration' %}" class="btn btn--small btn--highlighted">Załóż konto</a></li>
+        </ul>
+
+        <ul>
+          <li><a href="{% url 'start' %}" class="btn btn--without-border active">Start</a></li>
+          <li><a href="{% url 'start' %}#steps" class="btn btn--without-border">O co chodzi?</a></li>
+          <li><a href="{% url 'start' %}#about-us" class="btn btn--without-border">O nas</a></li>
+          <li><a href="{% url 'start' %}#help" class="btn btn--without-border">Fundacje i organizacje</a></li>
+          <li><a href="{% url 'add_donation' %}" class="btn btn--without-border">Przekaż dary</a></li>
+          <li><a href="{% url 'start' %}#contact" class="btn btn--without-border">Kontakt</a></li>
+        </ul>
+    </nav>
 {% endblock %}
 
 {% block content %}
