--- a/oddam/templates/form-confirmation.html
+++ b/oddam/templates/form-confirmation.html
@@ -2,26 +2,20 @@
 {% block header %}
 
     <header class="header--form-page">
-      <nav class="container container--70">
-        <ul class="nav--actions">
-          <li class="logged-user">
-            Witaj Agata
-            <ul class="dropdown">
-              <li><a href="#">Profil</a></li>
-              <li><a href="#">Moje zbiórki</a></li>
-              <li><a href="#">Wyloguj</a></li>
-            </ul>
-          </li>
-        </ul>
+{#      <nav class="container container--70">#}
+{#        <ul class="nav--actions">#}
+{#          <li class="logged-user">#}
+{#            Witaj Agata#}
+{#            <ul class="dropdown">#}
+{#              <li><a href="#">Profil</a></li>#}
+{#              <li><a href="#">Moje zbiórki</a></li>#}
+{#              <li><a href="#">Wyloguj</a></li>#}
+{#            </ul>#}
+{#          </li>#}
+{#        </ul>#}
 
-        <ul>
-          <li><a href="{% url 'start' %}" class="btn btn--without-border active">Start</a></li>
-          <li><a href="{% url 'start' %}#steps" class="btn btn--without-border">O co chodzi?</a></li>
-          <li><a href="{% url 'start' %}#about-us" class="btn btn--without-border">O nas</a></li>
-          <li><a href="{% url 'start' %}#help" class="btn btn--without-border">Fundacje i organizacje</a></li>
-          <li><a href="{% url 'start' %}#contact" class="btn btn--without-border">Kontakt</a></li>
-        </ul>
-      </nav>
+        {{ block.super }}
+{#      </nav>#}
 
       <div class="slogan container container--90">
           <h2>
