--- a/oddam/templates/login.html
+++ b/oddam/templates/login.html
@@ -7,14 +7,14 @@
 {% block content %}
     <section class="login-page">
       <h2>Zaloguj się</h2>
-      <form>
+      <form method="post">
+          {% csrf_token %}
+
+        {% for field in form %}
         <div class="form-group">
-          <input type="email" name="email" placeholder="Email" />
+            {{ field }}
         </div>
-        <div class="form-group">
-          <input type="password" name="password" placeholder="Hasło" />
-          <a href="#" class="btn btn--small btn--without-border reset-password">Przypomnij hasło</a>
-        </div>
+        {% endfor %}
 
         <div class="form-group form-group--buttons">
           <a href="{% url 'registration' %}" class="btn btn--without-border">Załóż konto</a>
