--- a/oddam/templates/base.html
+++ b/oddam/templates/base.html
@@ -14,8 +14,19 @@
 {% block header %}
     <nav class="container container--70">
         <ul class="nav--actions">
+          {% if user.is_anonymous %}
           <li><a href="{% url 'login' %}" class="btn btn--small btn--without-border">Zaloguj</a></li>
           <li><a href="{% url 'registration' %}" class="btn btn--small btn--highlighted">Załóż konto</a></li>
+          {% else %}
+          <li class="logged-user">
+            Witaj {{ user.first_name }}
+            <ul class="dropdown">
+              <li><a href="#">Profil</a></li>
+              <li><a href="#">Ustawienia</a></li>
+              <li><a href="{% url 'logout' %}">Wyloguj</a></li>
+            </ul>
+          </li>
+          {% endif %}
         </ul>
 
         <ul>
