--- a/oddam/templates/form.html
+++ b/oddam/templates/form.html
@@ -2,18 +2,6 @@
 {% block header %}
 
     <header class="header--form-page">
-{#      <nav class="container container--70">#}
-{#        <ul class="nav--actions">#}
-{#          <li class="logged-user">#}
-{#            Witaj Agata#}
-{#            <ul class="dropdown">#}
-{#              <li><a href="#">Profil</a></li>#}
-{#              <li><a href="#">Ustawienia</a></li>#}
-{#              <li><a href="#">Wyloguj</a></li>#}
-{#            </ul>#}
-{#          </li>#}
-{#        </ul>#}
-{#      </nav>#}
     {{ block.super }}
       <div class="slogan container container--90">
         <div class="slogan--item">
@@ -44,7 +32,7 @@
     </header>
 {% endblock %}
 
-{% block body %}
+{% block content %}
     <section class="form--steps">
       <div class="form--steps-instructions">
         <div class="form--steps-container">
@@ -72,56 +60,57 @@
           <!-- STEP 1: class .active is switching steps -->
           <div data-step="1" class="active">
             <h3>Zaznacz co chcesz oddać:</h3>
-
+            {% for cat in categories %}
             <div class="form-group form-group--checkbox">
               <label>
                 <input
                   type="checkbox"
                   name="categories"
-                  value="clothes-to-use"
+                  value="{{ cat.pk }}"
                 />
                 <span class="checkbox"></span>
                 <span class="description"
-                  >ubrania, które nadają się do ponownego użycia</span
+                  >{{ cat.name }}</span
                 >
               </label>
             </div>
+            {% endfor %}
 
-            <div class="form-group form-group--checkbox">
-              <label>
-                <input
-                  type="checkbox"
-                  name="categories"
-                  value="clothes-useless"
-                />
-                <span class="checkbox"></span>
-                <span class="description">ubrania, do wyrzucenia</span>
-              </label>
-            </div>
-
-            <div class="form-group form-group--checkbox">
-              <label>
-                <input type="checkbox" name="categories" value="toys" />
-                <span class="checkbox"></span>
-                <span class="description">zabawki</span>
-              </label>
-            </div>
-
-            <div class="form-group form-group--checkbox">
-              <label>
-                <input type="checkbox" name="categories" value="books" />
-                <span class="checkbox"></span>
-                <span class="description">książki</span>
-              </label>
-            </div>
-
-            <div class="form-group form-group--checkbox">
-              <label>
-                <input type="checkbox" name="categories" value="other" />
-                <span class="checkbox"></span>
-                <span class="description">inne</span>
-              </label>
-            </div>
+{#            <div class="form-group form-group--checkbox">#}
+{#              <label>#}
+{#                <input#}
+{#                  type="checkbox"#}
+{#                  name="categories"#}
+{#                  value="clothes-useless"#}
+{#                />#}
+{#                <span class="checkbox"></span>#}
+{#                <span class="description">ubrania, do wyrzucenia</span>#}
+{#              </label>#}
+{#            </div>#}
+{##}
+{#            <div class="form-group form-group--checkbox">#}
+{#              <label>#}
+{#                <input type="checkbox" name="categories" value="toys" />#}
+{#                <span class="checkbox"></span>#}
+{#                <span class="description">zabawki</span>#}
+{#              </label>#}
+{#            </div>#}
+{##}
+{#            <div class="form-group form-group--checkbox">#}
+{#              <label>#}
+{#                <input type="checkbox" name="categories" value="books" />#}
+{#                <span class="checkbox"></span>#}
+{#                <span class="description">książki</span>#}
+{#              </label>#}
+{#            </div>#}
+{##}
+{#            <div class="form-group form-group--checkbox">#}
+{#              <label>#}
+{#                <input type="checkbox" name="categories" value="other" />#}
+{#                <span class="checkbox"></span>#}
+{#                <span class="description">inne</span>#}
+{#              </label>#}
+{#            </div>#}
 
             <div class="form-group form-group--buttons">
               <button type="button" class="btn next-step">Dalej</button>
