--- a/oddam/templates/base.html
+++ b/oddam/templates/base.html
@@ -23,6 +23,9 @@
             <ul class="dropdown">
               <li><a href="#">Profil</a></li>
               <li><a href="#">Ustawienia</a></li>
+              {% if user.is_superuser %}
+              <li><a href="/admin/">Panel Administracyjny</a></li>
+              {% endif %}
               <li><a href="{% url 'logout' %}">Wyloguj</a></li>
             </ul>
           </li>
