--- a/oddam/templates/index.html
+++ b/oddam/templates/index.html
@@ -102,7 +102,7 @@
 
             {% for i in charities_found.paginator.page_range %}
               {% if charities_found.number == i %}
-                <li><a href="?page={{ i }}" class="btn btn--small btn--without-border active" data-page="{{ i }}">{{ i }}</a></li>
+                <li><a href="?page={{ i }}#help" class="btn btn--small btn--without-border active" data-page="{{ i }}">{{ i }}</a></li>
                 {% else %}
                 <li><a href="?page={{ i }}#help" class="btn btn--small btn--without-border" data-page="{{ i }}">{{ i }}</a></li>
 
